After responsive index

--- a/groups.html
+++ b/groups.html
@@ -66,35 +66,222 @@
             </div>
             <div class="right-card-parent">
 
-                <!-- .right-card>.right-card-group>h2.group-name+div.group-flags>.gorup-flag*4>img[src="images/Flag.png"]+h1{NameOfCountry} -->
-
-
+                <!-- .right-card>.right-card-group>h2.group-name{Group-A}+div.group-flags>.gorup-flag*4>img[src="images/flag/$.png"]+h1{NameOfCountry} -->
                 <div class="right-card">
                     <div class="right-card-group">
-
-
-                        <h2 class="group-name"></h2>
+                        <h2 class="group-name">Group-A</h2>
                         <div class="group-flags">
                             <div class="gorup-flag">
-                                <img src="images/Flag.png" alt="">
-                                <h1>NameOfCountry</h1>
+                                <img src="images/flag/1.png" alt="">
+                                <h1>France</h1>
                             </div>
                             <div class="gorup-flag">
-                                <img src="images/Flag.png" alt="">
-                                <h1>NameOfCountry</h1>
+                                <img src="images/flag/2.png" alt="">
+                                <h1>Germany</h1>
                             </div>
                             <div class="gorup-flag">
-                                <img src="images/Flag.png" alt="">
-                                <h1>NameOfCountry</h1>
+                                <img src="images/flag/3.png" alt="">
+                                <h1>Italy</h1>
                             </div>
                             <div class="gorup-flag">
-                                <img src="images/Flag.png" alt="">
-                                <h1>NameOfCountry</h1>
+                                <img src="images/flag/4.png" alt="">
+                                <h1>Brazill</h1>
                             </div>
                         </div>
                     </div>
                 </div>
 
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-B</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/5.png" alt="">
+                                <h1>Argentina</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/6.png" alt="">
+                                <h1>Ingland</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/7.png" alt="">
+                                <h1>Ghana</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/8.png" alt="">
+                                <h1>Spain</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-C</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/1.png" alt="">
+                                <h1>France</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/2.png" alt="">
+                                <h1>Germany</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/3.png" alt="">
+                                <h1>Italy</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/4.png" alt="">
+                                <h1>Brazill</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-D</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/5.png" alt="">
+                                <h1>Argentina</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/6.png" alt="">
+                                <h1>Ingland</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/7.png" alt="">
+                                <h1>Ghana</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/8.png" alt="">
+                                <h1>Spain</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-E</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/1.png" alt="">
+                                <h1>France</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/2.png" alt="">
+                                <h1>Germany</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/3.png" alt="">
+                                <h1>Italy</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/4.png" alt="">
+                                <h1>Brazill</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-f</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/5.png" alt="">
+                                <h1>Argentina</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/6.png" alt="">
+                                <h1>Ingland</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/7.png" alt="">
+                                <h1>Ghana</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/8.png" alt="">
+                                <h1>Spain</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-G</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/1.png" alt="">
+                                <h1>France</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/2.png" alt="">
+                                <h1>Germany</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/3.png" alt="">
+                                <h1>Italy</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/4.png" alt="">
+                                <h1>Brazill</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-H</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/5.png" alt="">
+                                <h1>Argentina</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/6.png" alt="">
+                                <h1>Ingland</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/7.png" alt="">
+                                <h1>Ghana</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/8.png" alt="">
+                                <h1>Spain</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-card">
+                    <div class="right-card-group">
+                        <h2 class="group-name">Group-I</h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/flag/1.png" alt="">
+                                <h1>France</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/2.png" alt="">
+                                <h1>Germany</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/3.png" alt="">
+                                <h1>Italy</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/flag/4.png" alt="">
+                                <h1>Brazill</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
