After responsive index

--- a/upcoming.html
+++ b/upcoming.html
@@ -59,7 +59,7 @@
                     <div class="card-button upcoming">
                         <a target="_blank" href="upcoming.html">Upcoming Match</a>
                     </div>
-                    <div class="card-button groups">
+                    <div class="card-button group">
                         <a target="_blank" href="groups.html">All Groups</a>
                     </div>
                 </div>
