--- a/groups.html
+++ b/groups.html
@@ -13,12 +13,12 @@
     <!----------- Style Sheet ------------>
     <link rel="stylesheet" href="style.css">
     <style>
-        .groups {
+        .group{
             background-color: red;
             color: white
         }
 
-        .groups:hover a {
+        .group:hover a {
             color: white;
         }
     </style>
@@ -59,15 +59,14 @@
                     <div class="card-button upcoming">
                         <a target="_blank" href="upcoming.html">Upcoming Match</a>
                     </div>
-                    <div class="card-button groups">
+                    <div class="card-button group">
                         <a target="_blank" href="groups.html">All Groups</a>
                     </div>
                 </div>
             </div>
             <div class="right-card-parent">
 
-                <!-- .right-card>.right-card-group>h2.group-name{Group-A}+div.group-flags>.gorup-flag*4>img[src="images/flag/$.png"]+h1{NameOfCountry} -->
-                <div class="right-card">
+                <div class="right-card right-card-group">
                     <div class="right-card-group">
                         <h2 class="group-name">Group-A</h2>
                         <div class="group-flags">
