--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a target="_blank" href="upcoming.html">Upcoming Match</a>
                     </div>
                     <div class="card-button groups">
-                        <a target="_blank" href="groups.html">All Groups</a>
+                        <a target="_blank" href="groups.html">All Group</a>
                     </div>
                 </div>
             </div>
