--- a/upcoming.html
+++ b/upcoming.html
@@ -60,7 +60,7 @@
                         <a target="_blank" href="upcoming.html">Upcoming Match</a>
                     </div>
                     <div class="card-button group">
-                        <a target="_blank" href="groups.html">All Groups</a>
+                        <a target="_blank" href="groups.html">All Group</a>
                     </div>
                 </div>
             </div>
