After responsive index

--- a/groups.html
+++ b/groups.html
@@ -28,7 +28,7 @@
     <main>
         <header>
             <div class="header-title-sec">
-                <h1>The Greatest show on the earth</h1>
+                <h1>The Greatest show on the Earth</h1>
                 <p class="header-para">
                     Goal, the world’s largest football media platform, and Lega Serie A, one of the world’s top 5
                     football leagues, with over 530 million fans worldwide, have today announced a global partnership to
