After responsive index

--- a/groups.html
+++ b/groups.html
@@ -13,7 +13,7 @@
     <!----------- Style Sheet ------------>
     <link rel="stylesheet" href="style.css">
     <style>
-        .group{
+        .group {
             background-color: red;
             color: white
         }
@@ -28,7 +28,8 @@
     <main>
         <header>
             <div class="header-title-sec">
-                <h1>The Greatest show on the Earth</h1>
+                <h1>The World Biggest Show Ever</h1>
+                <h3>Fifa World Cup-2023</h3>
                 <p class="header-para">
                     Goal, the world’s largest football media platform, and Lega Serie A, one of the world’s top 5
                     football leagues, with over 530 million fans worldwide, have today announced a global partnership to
@@ -54,13 +55,13 @@
             <div class="left-card">
                 <div class="left-card-box">
                     <div class="card-button blog">
-                        <a target="_blank" href="index.html">Blog</a>
+                        <a href="index.html">Blog</a>
                     </div>
                     <div class="card-button upcoming">
-                        <a target="_blank" href="upcoming.html">Upcoming Match</a>
+                        <a href="upcoming.html">Upcoming Match</a>
                     </div>
                     <div class="card-button group">
-                        <a target="_blank" href="groups.html">All Group</a>
+                        <a href="groups.html">All Group</a>
                     </div>
                 </div>
             </div>
