--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!----------- Style Sheet ------------>
     <link rel="stylesheet" href="style.css">
     
+    <!-- Style for Blog, Upcoming, Groups Button -->
     <style>
         .blog {
             background-color: red;
