--- a/groups.html
+++ b/groups.html
@@ -12,6 +12,8 @@
     <!----------- Style Sheet ------------>
     <!----------- Style Sheet ------------>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Style for Blog, Upcoming, Groups Button -->
     <style>
         .group {
             background-color: red;
